[gd_scene load_steps=13 format=3 uid="uid://dwm2amk7yu3v2"]

[ext_resource type="Script" path="res://core/components/projectile_spawner_component.gd" id="1_7gyi2"]
[ext_resource type="Script" path="res://actors/aliens/alien.gd" id="1_18omt"]
[ext_resource type="Script" path="res://core/components/health_component.gd" id="1_kshyc"]
[ext_resource type="AudioStream" uid="uid://c84ufna086j5l" path="res://actors/aliens/audio/alien_shot.wav" id="2_27l1e"]
[ext_resource type="Resource" uid="uid://b00rlmfvqg1pl" path="res://actors/aliens/alien_laser_projectile.tres" id="2_wnahc"]
[ext_resource type="PackedScene" uid="uid://dxup4ej7rikee" path="res://effects/splatter_effect.tscn" id="4_a2ib6"]
[ext_resource type="PackedScene" uid="uid://n587cr1psc8b" path="res://core/components/attack_component.tscn" id="5_2p0gu"]
[ext_resource type="Script" path="res://core/components/position_clamp_component.gd" id="7_iartr"]
[ext_resource type="Script" path="res://core/components/score_component.gd" id="8_8fvoh"]
[ext_resource type="PackedScene" uid="uid://d3sdsrfyov5lw" path="res://core/components/hurt_component.tscn" id="9_8dkm7"]

[sub_resource type="Animation" id="Animation_ojiau"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oy4h6"]
_data = {
"RESET": SubResource("Animation_ojiau")
}

[node name="Alien" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_18omt")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="MuzzleMarker" type="Marker2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_oy4h6")
}

[node name="Audio" type="Node2D" parent="."]

[node name="AttackSound" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("2_27l1e")

[node name="Effects" type="Node2D" parent="."]

[node name="SplatterEffect" parent="Effects" instance=ExtResource("4_a2ib6")]

[node name="Components" type="Node" parent="."]

[node name="HealthComponent" type="Node" parent="Components"]
script = ExtResource("1_kshyc")

[node name="ProjectileSpawnerComponent" type="Node" parent="Components"]
script = ExtResource("1_7gyi2")
_projectile_data = ExtResource("2_wnahc")

[node name="AttackComponent" parent="Components" node_paths=PackedStringArray("_attack_sound", "_projectile_spawner_component") instance=ExtResource("5_2p0gu")]
_attack_sound = NodePath("../../Audio/AttackSound")
_projectile_spawner_component = NodePath("../ProjectileSpawnerComponent")

[node name="PositionClampComponent" type="Node" parent="Components" node_paths=PackedStringArray("actor")]
script = ExtResource("7_iartr")
actor = NodePath("../..")

[node name="ScoreComponent" type="Node" parent="Components"]
script = ExtResource("8_8fvoh")

[node name="HurtComponent" parent="Components" node_paths=PackedStringArray("_health_component", "_collision_shape", "_death_animation_player") instance=ExtResource("9_8dkm7")]
_invulernability_time = 0.1
_health_component = NodePath("../HealthComponent")
_collision_shape = NodePath("../../CollisionShape2D")
_death_animation_player = NodePath("../../AnimationPlayer")

[node name="Timers" type="Node" parent="."]

[node name="IdleTimer" type="Timer" parent="Timers"]

[connection signal="death_finished" from="Components/HurtComponent" to="." method="_on_death_finished"]
[connection signal="timeout" from="Timers/IdleTimer" to="." method="_on_idle_timer_timeout"]
